--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,12 +3,12 @@ title: Mike Dougherty
 description: Mike Dougherty's personal site/blog/journal
 show_downloads: false
 
-#minima:
+minima:
 #  date_format: "%b %-d, %Y"
 
-# generate social links in footer
-social_links:
-  twitter: mdougherty
-  github:  doughertym
-  youtube: MikeDougherty
+  # generate social links in footer
+  social_links:
+    twitter: mdougherty
+    github:  doughertym
+    youtube: MikeDougherty
 
