--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           jekyll_src: 'docs'
-          jekyll_build_options: '--drafts'
+          jekyll_build_options:
           target_branch: 'gh-pages'
